# ctrl-phi

./: .gitignore  404.html  CNAME  README.md  about.html  about.txt  extension.crx  index.html  index.txt  install.html  install.txt  playground.html  playground.txt  sources.txt
.github/workflows/: actions-deploy.yaml
_next/static/chunks/: 407-90f7a0083f5f17d1.js  438-449722177db70626.js  main-ac3ae5503b06e1c2.js  main-app-a2a0981019831239.js  main-c1f3e592bf485911.js  main-d1eaa60190812bb8.js  webpack-145e7217c0b621f2.js  webpack-39b575ced3cf29bd.js  webpack-7142d562182251b3.js  webpack-d171ba9c6d69420e.js
_next/static/css/: 2eaeb5ddf8da5124.css  6c967a3ede3c089b.css  96861e7f7112f32a.css  e800d79de84c7291.css
docs/: 404.html  about.html  about.txt  index.html  index.txt  playground.html  playground.txt
extension/: README.md  manifest.json  popup.html  style.css
extension/scripts/: background.js  popup.js
prompting/: OutputParser.py  README.md  ResultModel.py  SearchAgent.py  SearchPromptFactory.py  demo.py  reference.txt
server/: README.md  models.py  pyproject.toml  reference.txt
server/server/: OutputParser.py  SearchAgent.py  SearchPromptFactory.py  __main__.py  demo.py  server.py
server/server/llms/: ClaudeLLM.py  LLM.py  LLMConfig.py  OpenAILLM.py
website/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
website/app/: layout.tsx  page.tsx
website/app/about/: page.tsx
website/app/components/: Card.tsx  Loading.tsx  Navbar.tsx  SimpleEditor.tsx
website/app/install/: page.tsx
(+26 files in other folders)
